src/test/deca/syntax/valid/test_parser_field_with_initialization.deca
// Description:
//    Minimalistic program to test a field with initialization in a class.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car {
    int immatriculation = 123456;
}
