src/test/deca/syntax/invalid/notYetImplemented/test_parser_class_without_bracket.deca
// Description:
//    Minimalistic program to test the creation of a class without brackets.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car;